--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
-    "@types/node": "8",
+    "@types/mocha": "^7.0.0",
+    "@types/node": "^12.0.0",
     "@types/pump": "^1.0.1",
     "lerna": "^3.18.3",
     "tslint": "^5.20.0",
