--- a/packages/stream-electron-ipc/package.json
+++ b/packages/stream-electron-ipc/package.json
@@ -18,11 +18,14 @@
     "prepublish": "yarn run build"
   },
   "devDependencies": {
-    "@types/node": "^8.0.0",
-    "electron": "^3.0.14",
+    "@types/node": "^12.0.0",
+    "electron": "^9.0.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.20.0",
     "tslint-config-station": "^0.6.0",
     "typescript": "^3.6.4"
+  },
+  "peerDependencies": {
+    "electron": ">=3.0.14 <10.0.0"
   }
 }
